--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body ng-app="app">
 <div class="row">
     <div ui-view="menu"
-         style="padding-left: 50px"
          class="col-xs-3"></div>
     <div ui-view="panel"
-         class="col-xs-9"></div>
+         class="col-xs-3"></div>
+    <div ui-view="mainview"
+         class="col-xs-6"></div>
 </div>
 </body>
 </html>
