--- a/menu/menu.html
+++ b/menu/menu.html
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="row"
+     style="padding-left: 50px">
     <h4 class="text-primary">Menu</h4>
     <ul class="list-unstyled">
         <li><a ui-sref="app">Index</a></li>
